<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hidrogeo1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- activity_main -->
    <string name="hidro_geo">HidroGeo</string>
    <string name="cadastro_dados">Cadastrar Dados</string>
    <string name="inserir_dados">Inserir Dados</string>
    <string name="exportar_dados">Exportar Dados</string>
    <string name="restaurar_dados">Restaurar Dados</string>
    <string name="logo_ufms">Logo UFMS</string>
    
    <string name="hint_campo_obrigatorio">Campo Obrigatório!</string>
    
    
    
    <!-- activity_formulario -->
    <string name="responsavel">Responsável:</string>
    <string name="poco">Poço:</string>
    <string name="localidade">Localidade:</string>
    <string name="unidade_federativa">UF:</string>
    <string name="leste_oeste">Leste/Oeste:</string>
    <string name="norte_sul">Norte/Sul:</string>
    <string name="cota">Cota:</string>
    <string name="utm">UTM:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="data_analise">Data da Análise:</string>
    <string name="horario_analise">Horário da Análise:</string>
    <string name="temperatura_ambiente">Temperatura Ambiente:</string>
    <string name="temperatura_agua">Temperatura da Água:</string>
    <string name="pH">pH:</string>
    <string name="condutividade_eletrica">Condutividade Elétrica:</string>
    <string name="solidos_totais_dissolvidos">Sólidos Totais Dissolvidos:</string>
    <string name="potencial_oxi_reducao">Potencial Óxi-Redução::</string>
    <string name="alcalinidade_total">Alcalinidade Total:</string>
    <string name="alcalinidade_carbonato">Alcalinidade Carbonato:</string>
    <string name="observacoes">Observações:</string>
    <string name="salvar_formulario">Salvar</string>

</resources>
