<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/responsavel" />

        <EditText
        	android:id="@+id/responsavel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poco" />
        
        <EditText
        	android:id="@+id/poco"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />
        
		<!-- Possibilidade de inserir um Spinner -->
        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localidade" />
        
        <EditText
        	android:id="@+id/localidade"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />
        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unidade_federativa" />
        
        <EditText
        	android:id="@+id/unidade_federativa"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leste_oeste" />
        
        <EditText
        	android:id="@+id/leste_oeste"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/norte_sul" />
        
        <EditText
        	android:id="@+id/norte_sul"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cota" />
        
        <EditText
        	android:id="@+id/cota"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utm" />
        
        <EditText
        	android:id="@+id/utm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude" />
        
        <EditText
        	android:id="@+id/longitude"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude" />
        
        <EditText
        	android:id="@+id/latitude"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_analise" />
        
        <EditText
        	android:id="@+id/data_analise"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horario_analise" />
        
        <EditText
        	android:id="@+id/horario_analise"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatura_ambiente" />
        
        <EditText
        	android:id="@+id/temperatura_ambiente"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatura_agua" />
        
        <EditText
        	android:id="@+id/temperatura_agua"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pH" />
        
        <EditText
        	android:id="@+id/pH"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condutividade_eletrica" />
        
        <EditText
        	android:id="@+id/condutividade_eletrica"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solidos_totais_dissolvidos" />
        
        <EditText
        	android:id="@+id/solidos_totais_dissolvidos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/potencial_oxi_reducao" />
        
        <EditText
        	android:id="@+id/potencial_oxi_reducao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcalinidade_total" />
        
        <EditText
        	android:id="@+id/alcalinidade_total"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcalinidade_carbonato" />
        
        <EditText
        	android:id="@+id/alcalinidade_carbonato"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />

        <TextView
            style="@style/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observacoes" />
        
        <EditText
        	android:id="@+id/observacoes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_campo_obrigatorio" />
        
        <Button
        android:id="@+id/botao_salvar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="@string/salvar_formulario" />
        
    </LinearLayout>

</ScrollView>