<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/responsavel" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Marília C. K." />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/poco" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Poço teste" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/localidade" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Localidade teste" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/unidade_federativa" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="UF teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/leste_oeste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Leste Oeste teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/norte_sul" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Norte Sul teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/cota" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Cota teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/utm" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="UTM teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/longitude" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Longitude teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/latitude" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Latitude teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/data_analise" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Data Análise teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/horario_analise" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Horário Análise teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/temperatura_ambiente" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Temperatura Ambiente teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/temperatura_agua" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Temperatura Água teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/pH" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="pH teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/condutividade_eletrica" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Condutividade Elétrica teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/solidos_totais_dissolvidos" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Sólidos Totais Dissolvidos teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/potencial_oxi_reducao" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Potencial Oxi Redução teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/alcalinidade_total" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Alcalinidade Total teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/alcalinidade_carbonato" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Alcalinidade Carbonato teste" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/parametros"
            android:text="@string/observacoes" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valores"
            android:text="Observações teste" />
        
    </LinearLayout>

</ScrollView>