<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C9C9C"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <!-- width = fill_parent - para obter largura ocupando toda tela -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hidro_geo"
        android:textColor="#000000"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cadastro_dados"
        android:textColor="#000000"
        android:textSize="15sp" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="45dp" />

    <Button
        android:id="@+id/botao_inserir"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="@string/inserir_dados" />

    <Button
        android:id="@+id/botao_exportar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="@string/exportar_dados" />

    <Button
        android:id="@+id/botao_restaurar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="@string/restaurar_dados" />

    
    
    <TextView
        android:id="@+id/aviso"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="#000000"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="115dp"
        android:layout_height="75dp"
        android:contentDescription="@string/logo_ufms"
        android:src="@drawable/logobonito" />

</LinearLayout>